<resources>
    <string name="app_name">labs</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="default_calculator_hint">Введите выражение</string>
    <string name="expression_exception">Выражение не может быть посчитано</string>
    <string name="loginAndPassword_exception">Неверный логин или пароль</string>
    <string name="smthAreNull">Не все поля заполнены</string>

    <string name="enter">Enter</string>
    <string name="button_login_sign_in">Войти</string>
    <string name="hint_editText_password">Пароль</string>
    <string name="hint_editText_login">Логин</string>
    <string name="button_add_image">Добавить</string>

    <!--TODO поменять на другое приложение  -->
    <integer name="com_vk_sdk_AppId">7749130</integer>
    <string name="title_activity_maps">Map</string>
</resources>