<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/seven"
                    android:text="@string/seven"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/eight"
                    android:text="@string/eight"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/nine"
                    android:text="@string/nine"
                    style="@style/buttonStyle" />

            <ImageButton
                    android:id="@+id/clear"
                    style="@style/buttonStyle"
                    android:src="@drawable/vector" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/four"
                    android:text="@string/four"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/five"
                    android:text="@string/five"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/six"
                    android:text="@string/six"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/subtract"
                    android:text="@string/subtract"
                    style="@style/buttonStyle" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/one"
                    android:text="@string/one"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/two"
                    android:text="@string/two"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/three"
                    android:text="@string/three"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/add"
                    android:text="@string/add"
                    style="@style/buttonStyle" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/multiply"
                    android:text="@string/multiply"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/zero"
                    android:text="@string/zero"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/divide"
                    android:text="@string/divide"
                    style="@style/buttonStyle" />

            <Button
                    android:id="@+id/equal"
                    android:text="@string/equals"
                    style="@style/buttonStyle" />
        </TableRow>
    </TableLayout>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="false"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            android:hint="@string/default_calculator_hint"
            android:textColorHint="@color/hint_color"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp"
            android:scrollbars="horizontal"
            app:autoSizeMaxTextSize="30sp"
            android:ellipsize="none" />

</androidx.constraintlayout.widget.ConstraintLayout>